<resources>
    <string name="app_name">pass24</string>
    <string name="text_login_phone">Номер телефона</string>
    <string name="text_login_pass">Пароль</string>
    <string name="title_login_fragment">Войти</string>
    <string name="text_login_button">Войти</string>
    <string name="dicr_no_account">Нет учетной записи?</string>
    <string name="text_to_registry">Зарегистрироваться</string>
    <string name="text_forgot_pass">Забыли пароль?</string>
    <string name="title_registry_fragment">Регистрация</string>
    <string name="text_registry_first_name">Имя</string>
    <string name="text_registry_second_name">Фамилия</string>
    <string name="text_registry_email">E-mail</string>
    <string name="text_registry_phone">Телефон</string>
    <string name="text_registry_pass">Пароль</string>
    <string name="text_registry_confirm_pass">Пароль еще раз</string>
    <string name="descr_registry_data_processing">Даю согласие на обработку персональных данных в соотвествии с политикой компании</string>
    <string name="text_registry_btn">Зарегистрироваться</string>
    <string name="descr_registry_footer">Есть записи?</string>
    <string name="text_registry_to_login_btn">Войти</string>
    <string name="text_registry_confirm">Подтверждение учетной записи</string>
    <string name="descr_registry_confirm">Мы отправили вам СМС сообщение с кодом подверждения. Введите код из сообщения, чтобы подтвердить номер телефона.</string>
    <string name="text_registry_cofirm_btn">Далее</string>
    <string name="text_registry_confirm_send_again">Отправить еще раз</string>
    <string name="text_password_recovery_button">Восстановить</string>
    <string name="text_welcome_head">Добро пожаловать!</string>
    <string name="text_welcome_info_1">PASS24.online - удобное приложение для создания пропусков без звонков и бумаг...</string>
    <string name="text_welcome_info_1_1">за несколько секунд!</string>
    <string name="text_welcome_info_2">Отправляйте приглашения гостям, чтобы не заполнять данные самостоятельно и создавайте шаблоны на частых гостей.</string>
    <string name="text_welcome_info_3_1">Выдавайте временные доверенности на создание пропусков.</string>
    <string name="text_welcome_info_3_2">После завершения срока действия, они перестанут действовать автоматически.</string>
    <string name="text_welcome_info_4">Получайте уведомления о прибытии и убытии гостей. История событий хранится в приложении.</string>
    <string name="text_welcome_skip">Пропустить</string>
    <string name="text_welcome_go">Поехали!</string>
    <string name="text_start_work">Начало работы</string>
    <string name="text_start_info">Для начала использования приложения, необходимо присоединиться к объекту, подключенному к системе PASS24.online</string>
    <string name="text_to_find_object">Как узнать номер объекта?</string>
    <string name="text_to_demo">Демо-режим</string>
    <string name="text_new_address_header">Новый адрес</string>
    <string name="text_query">Запрос на присоединение</string>
    <string name="hint_object_number">Номер объекта</string>
    <string name="hint_object_address">Адрес</string>
    <string name="button_send_new_address">Отправить</string>
    <string name="text_query_head">Запрос отправлен!</string>
    <string name="text_success_query">Объект получил ваш запрос. После рассмотрения заявки вы получите PUSH-уведомление.</string>
    <string name="text_use_demo">А пока можете попробовать демо-режим</string>
    <string name="text_send_another_query">Отправить другой запрос</string>
    <string name="button_enable_demo">Включить демо-режим</string>
    <string name="button_welcome_go">Поехали!</string>
    <string name="text_feed_item_info">Пропуск для A123BC изменил свой статус на Вне территории</string>
    <string name="text_event_header">Лента событий</string>
    <string name="text_trust_people_header">Доверенные лица</string>
    <string name="text_my_pattern_header">Мои шаблоны</string>
    <string name="text_my_pass_header">Мои пропуска</string>
    <string name="text_my_query_header">Мои запросы</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_filter_header_name">Фильтр</string>
    <string name="text_reject_status">Отклонённые</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_accept_status">Подтверждённые</string>
    <string name="text_open_status">Открытые</string>
    <string name="text_all_status">Все</string>
    <string name="text_FIO">ФИО</string>
    <string name="text_confidant_address">Адрес</string>
    <string name="text_confidant_validity">Срок действия</string>
</resources>
