<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"
        android:text="@string/title_registry_fragment"
        android:textColor="@color/textPrimary"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/text_registry_confirm"
        android:textColor="#B9B9B9"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/descr_registry_confirm"
        android:textAlignment="textStart"
        android:textColor="@color/textPrimary"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etConfirmRegistryCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="0000"
        android:inputType="number"
        android:letterSpacing="0.2"
        android:maxLength="4"
        android:maxLines="1"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnRegistry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_red_button"
        android:minHeight="56dp"
        android:stateListAnimator="@null"
        android:text="@string/text_registry_cofirm_btn"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tvSendAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/text_registry_confirm_send_again"
        android:textColor="#9C9C9C" />

</LinearLayout>