<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llNewAddress"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight=""
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <LinearLayout
        android:id="@+id/llNewAddressHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_weight=""
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="none"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_back"/>

        <LinearLayout
            android:id="@+id/llAddressHead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvNewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/text_new_address_header"/>

            <TextView
                android:id="@+id/tvQuery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="5dp"
                android:textColor="#B9B9B9"
                android:textSize="12sp"
                android:text="@string/text_query"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="21dp">

        <EditText
            android:id="@+id/etObjectNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_object_number"/>

        <EditText
            android:id="@+id/etObjectAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_object_address"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send_new_address"
        android:textColor="#FFFFFF"
        android:background="#DC3D41"/>

</LinearLayout>