<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="">
        <TextView
            android:id="@+id/tvStartWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="56dp"
            android:text="@string/text_start_work"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/ivStartLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="28dp"
            android:src="@drawable/ic_start_logo"
            android:contentDescription="image_geo"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvStartInfo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="29dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/text_start_info"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/tvFindObject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_to_find_object"
            android:textAlignment="center"
            android:textColor="#51CFC0"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDemoMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_to_demo"
            />


    </LinearLayout>

</LinearLayout>