<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="44dp"
    android:paddingEnd="44dp">

    <TextView
        android:id="@+id/tvWelcomeInfo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_welcome_info_1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvWelcomeInfo1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/text_welcome_info_1_1"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_below="@+id/tvWelcomeInfo1" />



    <ru.tenant.pass24.WelcomeView.rd.PageIndicatorView
        android:id="@+id/pageIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tvWelcomeSkip"

        app:piv_selectedColor="#E9413C"
        app:piv_unselectedColor="#C4C4C4"
        app:piv_viewPager="@id/vpWelcome"
        attrs:piv_padding="4dp"
        attrs:piv_radius="4dp" />

    <TextView
        android:id="@+id/tvWelcomeSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:paddingBottom="47dp"
        android:text="@string/text_welcome_skip"
        android:textAlignment="center"
        android:textColor="#9C9C9C"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/btnWelcomeGo"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_red_button"
        android:minHeight="56dp"
        android:text="@string/button_welcome_go"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        />

</RelativeLayout>