<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <LinearLayout
        android:id="@+id/llSuccessQueryHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="56dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSuccessQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_query_head"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivWelcomeLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="image_success"
            android:paddingTop="60dp"
            android:src="@drawable/ic_welcome_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSuccessQueryHeader">

        <TextView
            android:id="@+id/tvSuccessQueryInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_success_query"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="40dp"
            android:text="@string/text_use_demo"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSuccessQueryFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="32dp">

        <Button
            android:id="@+id/btnEnableDemoMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_red_button"
            android:minHeight="56dp"
            android:text="@string/button_enable_demo"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvSendAnotherQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_send_another_query"
            android:paddingTop="27dp"
            android:gravity="center"
            android:textColor="#51CFC0"
            android:textSize="12sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>