<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llWelcomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:gravity="center_horizontal"
            android:text="@string/text_welcome_head"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivWelcomeLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="image_success"
            android:paddingTop="64dp"
            android:paddingBottom="64dp"
            android:src="@drawable/ic_welcome_logo" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llWelcomeHeader">

    </androidx.viewpager.widget.ViewPager>


    <ru.tenant.pass24.helpers.WelcomeView.PageIndicatorView
        android:id="@+id/pageIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/flWelcomeFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:piv_selectedColor="#E9413C"
        app:piv_unselectedColor="#C4C4C4"
        app:piv_viewPager="@id/vpWelcome"
        attrs:piv_padding="4dp"
        attrs:piv_radius="4dp" />

    <FrameLayout
        android:id="@+id/flWelcomeFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvWelcomeSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_welcome_skip"
            android:textAlignment="center"
            android:textColor="#9C9C9C"
            android:textSize="14sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnWelcomeGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_red_button"
            android:minHeight="56dp"
            android:text="@string/button_welcome_go"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:visibility="invisible" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>